--- a/web/index.html
+++ b/web/index.html
@@ -55,5 +55,28 @@
       });
     });
   </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBgROyyokYsrHX5fRGRBui_Xt1GTA6wuu8",
+      authDomain: "artmarketplace-c750e.firebaseapp.com",
+      projectId: "artmarketplace-c750e",
+      storageBucket: "artmarketplace-c750e.appspot.com",
+      messagingSenderId: "802352147965",
+      appId: "1:802352147965:web:40045a3f66194937c23d94",
+      measurementId: "G-6BQFS5Z04Z"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 </html>
